# mindplayer

./: .calc_final.json  .gitignore  .test_calc.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml  recorder.py
.github/workflows/: publish.yml
docs/: trace-format-v0.1.md
examples/: django_app.py  fastapi_app.py  flask_app.py  sample.py  sample_backtrace.py  sample_complex.py  sample_pipeline.py  sample_program.py
examples/calculator/: add_op.py  divide_op.py  main_calc.py  multiply_op.py  subtract_op.py
scripts/: release_check.py
src/tracesnap/: __init__.py  _extcall.py  _recorder.py  _session.py  _structure.py  api.py  cli.py  library.py  redaction.py  server.py
src/tracesnap/integrations/: __init__.py  django.py  fastapi.py  flask.py
src/tracesnap/player/: __init__.py  call_graph.html  event_graph.html  home.html  player.html  record.html  simulator.html
tests/: test_cli.py  test_flask_integration.py  test_library.py  test_library_server.py  test_record.py  test_record_api.py  test_streaming.py  test_structure.py
